<resources>
    <string name="app_name">900TOEIC</string>
    <string name="google_signin">Continue with google</string>
    <string name="facebook_signin">Continue with facebook</string>
    <string name="facebook_app_id">1007989089798354</string>
    <string name="facebook_client_token">804173130107aed083f75d1d3088948d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="practice">Practice</string>
    <string name="statistic">Statistic</string>
    <string name="test">Tests</string>
    <string name="review">Review</string>
    <string name="profile">Profile</string>
    <string name="training_part_one">Part One Training</string>
    <string name="part_one_description">Describe the picture</string>
    <string name="keyA">(A)</string>
    <string name="keyB">(B)</string>
    <string name="keyC">(C)</string>
    <string name="keyD">(D)</string>
    <string name="show_script">Show Script</string>
    <string name="part1">Part One</string>
    <string name="part2">Part Two</string>
    <string name="part3">Part Three</string>
    <string name="part4">Part Four</string>
    <string name="part1_training">Part One Training</string>
    <string name="part2_training">Part Two Training</string>
    <string name="part3_training">Part Three Training</string>
    <string name="part4_training">Part Four Training</string>
    <string name="choose_part_to_review">Choose the part to review</string>
    <string name="revision">Revision</string>
    <string name="no_question">There is no question to review</string>
    <string name="real_test">Real Tests</string>
    <string name="submit">Submit</string>
    <string name="statistic_title">Progress</string>
    <string name="result">Result</string>
    <string name="logout">Log out</string>
    <string name="view_answer">View Script</string>
    <string name="target">Target</string>
    <string name="finish">Finish</string>
    <string name="done">DONE</string>
    <string name="setTarget">Set target</string>
</resources>