<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragment.ReviewFragment"
    android:background="#EFEFEF">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review_saved_question"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
<TextView
    android:layout_marginTop="64dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/choose_part_to_review"
    android:textAlignment="center"
    android:textSize="24sp"
    android:textColor="@color/black"
    android:layout_marginBottom="24dp"/>
<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btn_review_part1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_button"
    android:layout_marginHorizontal="32dp"
    android:text="@string/part1"
    android:textColor="@color/white"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_review_part2"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginHorizontal="32dp"
        android:text="@string/part2"
        android:textColor="@color/white"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_review_part3"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginHorizontal="32dp"
        android:text="@string/part3"
        android:textColor="@color/white"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_review_part4"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginHorizontal="32dp"
        android:text="@string/part4"
        android:textColor="@color/white"/>

</LinearLayout>