<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.PartTwoFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:id="@+id/txt_script_part_two"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="24dp"
                android:textStyle="italic|bold"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:textColor="@color/text_key"
                android:layout_height="150dp">
            </TextView>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_key1A"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:paddingHorizontal="24dp"
                android:background="@drawable/bg_button"
                android:textSize="18sp"
                android:text="@string/keyA"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_key1B"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:paddingHorizontal="24dp"
                android:background="@drawable/bg_button"
                android:textSize="18sp"
                android:text="@string/keyB"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_key1C"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:paddingHorizontal="24dp"
                android:background="@drawable/bg_button"
                android:textSize="18sp"
                android:text="@string/keyC"
                android:layout_marginBottom="12dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>