<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EFEFEF"
    tools:context=".Fragment.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <ImageView
                    android:id="@+id/btn_setting"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_setting" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/blueBackground"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/bar"
        android:background="@color/primary"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/blueWaveBackground"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/blueBackground"
        android:layout_marginTop="-60dp"
        android:src="@drawable/bg_wave" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_border"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/blueBackground"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-40dp"
        android:src="@color/white"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/blueBackground"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-35dp" />
    <TextView
        android:id="@+id/txt_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_border"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/cabin"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/txt_fullName"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        app:cardCornerRadius="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/practice"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/test"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/target"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:id="@+id/txt_numPractice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="60sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/txt_numTests"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="60sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/txt_target"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="60sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>