<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_media_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    style="@style/MySlider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9" />

                <TextView
                    android:id="@+id/txt_timestamp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp">

                <ImageView
                    android:id="@+id/btn_backward"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_backward" />

                <ImageView
                    android:id="@+id/btn_play"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_play" />

                <ImageView
                    android:id="@+id/btn_forward"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_forward" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="12dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/img_part_one"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="12dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@color/black">
            </ImageView>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_key1A"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:fontFamily="@font/arbutus_slab"
                android:background="@drawable/bg_button"
                android:textSize="18sp"
                android:paddingStart="8dp"
                android:text="@string/keyA"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_key1B"
                android:layout_marginTop="8dp"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:fontFamily="@font/arbutus_slab"
                android:background="@drawable/bg_button"
                android:textSize="18sp"
                android:paddingStart="8dp"
                android:text="@string/keyB"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_key1C"
                android:layout_marginTop="8dp"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:fontFamily="@font/arbutus_slab"
                android:background="@drawable/bg_button"
                android:textSize="18sp"
                android:paddingStart="8dp"
                android:text="@string/keyC"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_key1D"
                android:layout_marginTop="8dp"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:fontFamily="@font/arbutus_slab"
                android:background="@drawable/bg_button"
                android:paddingStart="8dp"
                android:textSize="18sp"
                android:text="@string/keyD"
                android:layout_marginBottom="12dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>