<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_media_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    style="@style/MySlider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9" />

                <TextView
                    android:id="@+id/txt_timestamp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp">

                <ImageView
                    android:id="@+id/btn_backward"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_backward" />

                <ImageView
                    android:id="@+id/btn_play"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_play" />

                <ImageView
                    android:id="@+id/btn_forward"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_forward" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/arbutus_slab"
                android:id="@+id/txt_script_part_two"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/text_key"
                android:textSize="18sp"
                android:textStyle="italic|bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_key1A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:textAllCaps="false"
                android:background="@drawable/bg_button"
                android:paddingStart="12dp"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/keyA"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_key1B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_button"
                android:paddingStart="12dp"
                android:textAllCaps="false"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/keyB"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_key1C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="12dp"
                android:textAllCaps="false"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_button"
                android:paddingStart="12dp"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/keyC"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>